# meal_planner

./: README.md  TESTING_FRAMEWORK_SUMMARY.md  example_test.py  foods.csv  langgraph.json  pyproject.toml  run_simple_tests.py  run_test_demo.py  run_tests.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: CI_CD_INTEGRATION.md  COMMAND_PATTERN_GUIDE.md  INTERPRETING_RESULTS.md  Ideas.md  Remaining_Steps.md
nbs/: integrated_demo.ipynb
notebooks/: automated_testing.ipynb
old/: DESIGN_OVERVIEW.md  IMPROVEMENT_RECOMMENDATIONS.md  IMPROVEMENT_SUMMARY.md  README.md  agent.py  multi_turn_conversations.md  state_utils.py  step3_assessment.md  step4_assessment.md  tool_utils.py  tools.py
src/: CODE_CLEANUP_SUMMARY.md  DESIGN_OVERVIEW.md  IMPROVEMENT_SUMMARY.md  PROPOSED_REDESIGN.md  README.md  agent-memory.ipynb  agent.py  agent_prompt.py  automated_planner_subgraph.py  constants.py  context_functions.py  debug_demo.py  food_database.py  info_gatherer_subgraph.py  intent_router_subgraph.py  main_agent.py  manual_editor_subgraph.py  models.py  nutrition_optimizer.py  state_utils.py  step1_assessment.md  step2_assessment.md  step3_assessment.md  step5_assessment.md  studio_agent.py  summarize_node.py  task_coordinator_subgraph.py  tools.py  user_flow_examples.md
studio/: README.md  langgraph.json  requirements.txt
testing/: README.md  REFACTORING_PLAN.md  TODO.md  USER_AGENT_COMPLEXITY_ANALYSIS.md  __init__.py  evaluation_models.py  scenario_loader.py  (+10 more)
(+26 files in other folders)
